# GUAIA-Facebook

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  save_fb_html.py
.github/workflows/: ci.yml
docker/searxng/: settings.yml
docs/: facebook_rebuild.md  planejamento.md  searxng.md
migrations/: env.py
migrations/versions/: 0001_create_core_tables.py
session_data/: video.html
src/common/: logging.py  serialization.py
src/db/: base.py  migration_runtime.py  models.py
src/face/: __init__.py  api.py  browser.py  captcha.py  captcha_solver.py  config.py  errors.py  export_worker.py  facebook_parser.py  items.py  login.py  models.py  playwright_handler.py  queues.py  repository.py  scrapy_runtime.py  services.py  url_classifier.py  url_utils.py  worker_runtime.py
src/face/middlewares/: __init__.py  proxy.py  retry.py  stealth.py
src/face/pipelines/: __init__.py  cache.py  events.py  persist.py
src/face/spiders/: __init__.py  facebook_enrich.py  google_search.py  runner.py  settings.py
tests/: conftest.py  test_api.py  test_browser.py  test_config.py  test_facebook_enrich_spider.py  test_google_search_spider.py  test_integration_real_services.py  test_logging.py  test_migration_runtime.py  test_query_api.py  test_queues.py  test_search_worker_runtime.py  test_spider_runner.py  test_url_utils.py
