[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guiai-facebook"
version = "0.1.0"
description = "Modulo Facebook do InfoPolitica com Scrapy + Playwright Stealth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Squad Dados / Scrapy InfoPolitica" }
]
dependencies = [
  "aio-pika>=9.4,<10.0",
  "alembic>=1.13,<2.0",
  "fastapi>=0.111,<1.0",
  "playwright>=1.44,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "scrapy>=2.11,<3.0",
  "scrapy-playwright>=0.0.40,<0.1",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "uvloop>=0.19,<1.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: tests that require dedicated PostgreSQL and RabbitMQ services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
